# MR_Lab_BilalAfzalAwan

./: README.md
Week01/: README.md  answers.md
Week01/my_first_pkg/: setup.py
Week01/my_first_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Week01/my_first_pkg/install/my_first_pkg/lib/my_first_pkg/: parameter_node
Week01/my_first_pkg/install/my_first_pkg/share/my_first_pkg/: package.sh  package.xml
week2/: README.md  answers.md
week3/: README.md  commands.md
week3/my_turtle_package/: package.xml  setup.py
week3/my_turtle_package/my_turtle_package/: move_circle.py  move_to_location.py  move_triangle.py  move_turtle.py  three_turtles.py
week4/: README.md  short_report.md
week4/my_launch_pkg/: package.xml  setup.py
week4/my_launch_pkg/launch/: turtlesim_launch.py  two_turtles_launch.py
week4/rosbag2_recordings/week4_demo_20260626_184334/: metadata.yaml  week4_demo_20260626_184334_0.db3
week4/rosbag2_recordings/week4_plot_recapture_20260626_191722/: metadata.yaml  week4_plot_recapture_20260626_191722_0.db3
week5/: README.md  commands.md  short_report.md
week5/maps/: my_map.pgm
week5/my_lab5_slam/: package.xml  setup.cfg  setup.py
week5/my_lab5_slam/my_lab5_slam/: cmd_vel_publisher.py  odom_subscriber.py
week5/rosbag_recordings/week5_motion_bag/: metadata.yaml
week6/: README.md
week6/my_reactive_navigation/: package.xml  setup.cfg  setup.py
week6/my_reactive_navigation/my_reactive_navigation/: lidar_navigator.py
week7/: README.md  cmnds.md
week7/my_autonomous_navigation/: package.xml  setup.cfg  setup.py
week7/my_autonomous_navigation/my_autonomous_navigation/: waypoint_navigator.py
week8/: README.md  cmnds.md  frames_2026-06-09_00.30.07.gv
week8/my_robot_description/: CMakeLists.txt  package.xml
week8/my_robot_description/launch/: display.launch.py
week8/my_robot_description/meshes/: base_frame_link.STL  base_link.STL  left_wheel_link.STL  lidar_link.STL  right_wheel_link.STL
week8/my_robot_description/rviz/: robot.rviz
week8/my_robot_description/urdf/: custom_robot.urdf  my_robot.urdf  vista_robot.urdf.xacro
week9/: README.md  cmnds.md
week9/my_camera_follower/: package.xml  setup.cfg  setup.py
week9/my_camera_follower/my_camera_follower/: my_camera_follower.py
