<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>my_lab5_slam</name>
  <version>0.0.0</version>
  <description>ROS2 Lab 5: TurtleBot3 SLAM, cmd_vel publisher and odom subscriber</description>

  <maintainer email="my@example.com">My</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
